REGRESSION (r210522): ASSERTION FAILED: divot.offset >= divotStart.offset seen with stress/import-basic.js and stress/import-from-eval.js https://bugs.webkit.org/show_bug.cgi?id=166873

Reviewed by Saam Barati.

The divot should be the end of `import` token.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseMemberExpression):


Canonical link: https://commits.webkit.org/183980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210535 268f45cc-cd09-0410-ab3c-d52691b4dbfc